# free-chatgpt

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: chatgpt.rs  lib.rs  main.rs  ua.rs
tests/: chatgpt_test.rs
