[package]
name = "chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = {version = "1.0.148", features = ["derive"]}
serde_json = {version = "1.0.89", default-features = false, features = ["alloc"]}
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread"] }
reqwest = {version="0.11.12", default-features=false, features = ["json", "rustls-tls"]}
anyhow = {version="1.0.66"}
dotenv = {version="0.15.0"}
rand={version="0.8.5"}
fake-useragent = "0.1.3"
rand_chacha={version="0.3.1"}
log={version="0.4.17"}
pretty_env_logger="0.4.0"
regex = "1.4.2"
actix-web = "4"

[profile.release]
lto = true
opt-level="z"
codegen-units = 1
panic = "abort"
strip = true
